--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 [dependencies]
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
+
+[[bin]]
+name = "png"
+path = "src/main.rs"
