--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
 
 [[bin]]
-name = "png"
+name = "pngSecretMessages"
 path = "src/main.rs"
