--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+assert_cmd = "2.0.16"
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
+predicates = "3.1.3"
 
 [[bin]]
 name = "pngMessages"
