--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ assert_cmd = "2.0.16"
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
 predicates = "3.1.3"
+serial_test = "3.2.0"
 
 [[bin]]
 name = "pngMessages"
