--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
 predicates = "3.1.3"
 serial_test = "3.2.0"
+tempfile = "3.19.1"
 
 [[bin]]
 name = "ImgMod"
