--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ assert_cmd = "2.0.16"
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
 predicates = "3.1.3"
+reqwest = {version = "0.12.15", features = ["blocking"]}
 serial_test = "3.2.0"
 tempfile = "3.19.1"
 
