--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,17 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-assert_cmd = "2.0.16"
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
 image = "0.25.6"
+libafl = "0.15.2"
 predicates = "3.1.3"
 reqwest = {version = "0.12.15", features = ["blocking"]}
+
+[dev-dependencies]
 serial_test = "3.2.0"
 tempfile = "3.19.1"
+assert_cmd = "2.0.16"
 
 [[bin]]
 name = "ImgMod"
