--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 clap = {version = "4.5.32", features = ["derive"]}
 crc = "3.2.1"
-image = "0.25.6"
+image =  { version = "0.25.6", default-features = false, features = ["png", "jpeg", "tiff", "webp"]}
 libafl = { version = "0.15.2", default-features = false }
 reqwest = {version = "0.12.15", features = ["blocking"]}
 
